crates/stef-parser/tests/snapshots/parser__error@mod_name.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap_err()"
input_file: crates/stef-parser/tests/inputs/invalid/mod_name.stef
---
stef::parse::mod_def (https://docs.rs/stef-parser/0.1.0/stef_parser/error/struct.ParseModuleError.html)

  × Failed to parse id declaration
  ╰─▶ Invalid module name
   ╭────
 1 │ mod Sample {}
   · ──────┬──────
   ·       ╰── In this declaration
   ╰────
  help: Expected module declaration in the form `❬B❭mod <name> {...}❬B❭`

Error: stef::parse::module::invalid_name (https://docs.rs/stef-parser/0.1.0/stef_parser/error/enum.ParseModuleCause.html#variant.InvalidName)

  × Invalid module name
   ╭────
 1 │ mod Sample {}
   ·     ▲
   ·     ╰── Problematic character
   ╰────
  help: Module names must start with a lowercase letter (❬Y❭a-z❬Y❭), followed by zero or more lowercase alphanumeric
        characters or underscores (❬Y❭a-z, 0-9, _❬Y❭)

