crates/stef-parser/tests/snapshots/parser__parse@enum_many_ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Sample enum.\n enum     Sample    {\n\n       One      @1,\n\n       Two  (   u32   @1,     u64     @2)    @2,\n\n            Three     {\n\n                    field1:    u32      @1,\n\n                    field2:    bool     @2,\n\n            }    @3,\n\n }"
input_file: crates/stef-parser/tests/inputs/enum_many_ws.stef
---
Schema {
    path: Some(
        "enum_many_ws.stef",
    ),
    source: "\n /// Sample enum.\n enum     Sample    {\n\n       One      @1,\n\n       Two  (   u32   @1,     u64     @2)    @2,\n\n            Three     {\n\n                    field1:    u32      @1,\n\n                    field2:    bool     @2,\n\n            }    @3,\n\n }\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Enum(
            Enum {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Sample enum.",
                            span: Span {
                                start: 2,
                                end: 18,
                            },
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 29,
                        end: 35,
                    },
                },
                generics: Generics(
                    [],
                ),
                variants: [
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "One",
                            span: Span {
                                start: 49,
                                end: 52,
                            },
                        },
                        fields: Unit,
                        id: Id {
                            value: 1,
                            span: Span {
                                start: 58,
                                end: 60,
                            },
                        },
                        span: Span {
                            start: 49,
                            end: 60,
                        },
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Two",
                            span: Span {
                                start: 70,
                                end: 73,
                            },
                        },
                        fields: Unnamed(
                            [
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                        span: Span {
                                            start: 79,
                                            end: 82,
                                        },
                                    },
                                    id: Id {
                                        value: 1,
                                        span: Span {
                                            start: 85,
                                            end: 87,
                                        },
                                    },
                                    span: Span {
                                        start: 76,
                                        end: 87,
                                    },
                                },
                                UnnamedField {
                                    ty: Type {
                                        value: U64,
                                        span: Span {
                                            start: 93,
                                            end: 96,
                                        },
                                    },
                                    id: Id {
                                        value: 2,
                                        span: Span {
                                            start: 101,
                                            end: 103,
                                        },
                                    },
                                    span: Span {
                                        start: 88,
                                        end: 103,
                                    },
                                },
                            ],
                        ),
                        id: Id {
                            value: 2,
                            span: Span {
                                start: 108,
                                end: 110,
                            },
                        },
                        span: Span {
                            start: 70,
                            end: 110,
                        },
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Three",
                            span: Span {
                                start: 125,
                                end: 130,
                            },
                        },
                        fields: Named(
                            [
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field1",
                                        span: Span {
                                            start: 158,
                                            end: 164,
                                        },
                                    },
                                    ty: Type {
                                        value: U32,
                                        span: Span {
                                            start: 169,
                                            end: 172,
                                        },
                                    },
                                    id: Id {
                                        value: 1,
                                        span: Span {
                                            start: 178,
                                            end: 180,
                                        },
                                    },
                                    span: Span {
                                        start: 158,
                                        end: 180,
                                    },
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field2",
                                        span: Span {
                                            start: 203,
                                            end: 209,
                                        },
                                    },
                                    ty: Type {
                                        value: Bool,
                                        span: Span {
                                            start: 214,
                                            end: 218,
                                        },
                                    },
                                    id: Id {
                                        value: 2,
                                        span: Span {
                                            start: 223,
                                            end: 225,
                                        },
                                    },
                                    span: Span {
                                        start: 203,
                                        end: 225,
                                    },
                                },
                            ],
                        ),
                        id: Id {
                            value: 3,
                            span: Span {
                                start: 245,
                                end: 247,
                            },
                        },
                        span: Span {
                            start: 125,
                            end: 247,
                        },
                    },
                ],
            },
        ),
    ],
}
